# sat-solver

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: dpll.h  formula.h  satsolve.h  semantics.h
src/: CmakeLists.txt  dpll.cpp  dpll_solver.cpp  main.cpp  sat_solve.cpp
src/util/: avl_tree.cpp  formula.cpp  satsolve.cpp  ssatsolvestaatus.cpp
test/: CMakeLists.txt
test/formulas_test/: CMakeLists.txt  atomtests.cpp  formulatests.cpp
tests/alternative_solution/: accuracy_tests.cpp  benchmark.cpp  dpll_baseline.cpp  dpll_baseline.h  satsolve_baseline.cpp  satsolve_baseline.h
